--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,15 +1,15 @@
 font:
   normal:
-    family: JetBrains Mono
+    family: monospace
     style: Regular
   bold:
-    family: JetBrains Mono
+    family: monospace
     style: Bold
   italic:
-    family: JetBrains Mono
+    family: monospace
     style: Italic
   bold_italic:
-    family: JetBrains Mono
+    family: monospace
     style: Bold Italic
   size: 7 
 
