Updated battery module in polybar.

--- a/leftwm/themes/night-sky/polybar.ini
+++ b/leftwm/themes/night-sky/polybar.ini
@@ -79,21 +79,17 @@ battery = BAT0
 adapter = AC
 full-at = 98
 
-
-format-charging-prefix = "BAT "
-format-charging = <format-charging-prefix> <label-charging>
+format-charging = <label-charging>
 format-charging-underline = #ffb52a
-label-charging = %percentage%%
+label-charging = BAT %percentage%%
 
-format-discharging-prefix = "BAT "
-format-discharging = <format-discharging-prefix> <label-discharging>
+format-discharging = <label-discharging>
 format-discharging-underline = #ff4929
-label-discharging = %percentage%%
+label-discharging = BAT %percentage%%
 
-format-full-prefix = "BAT "
-format-full = <format-full-prefix> <label-full>
+format-full = <label-full>
 format-full-underline = #11ff11
-label-full = %percentage%%
+label-full = BAT %percentage%%
 
 [module/xbacklight]
 type = internal/xbacklight
