--- a/leftwm/themes/night-sky/polybar.ini
+++ b/leftwm/themes/night-sky/polybar.ini
@@ -98,24 +98,35 @@ use-actual-brightness = true
 
 format-prefix = "BL "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f9aabb
+format-underline = #ff7700
 label = %percentage%%
 
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
-label = %percentage:2%%
+[module/pulseaudio]
+type = internal/pulseaudio
+
+format-volume = <label-volume>
+format-volume-underline = #ffff00
+label-volume = VOL %percentage%%
+label-volume-foreground = ${root.foreground}
+
+label-muted = muted
+label-muted-foreground = #666
 
 [module/memory]
 type = internal/memory
 interval = 2
 format-prefix = "RAM "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
+format-underline = #77ff00
 label = %percentage_used%%
+
+[module/cpu]
+type = internal/cpu
+interval = 2
+format-prefix = "CPU "
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #00ff77
+label = %percentage:2%%
 
 [module/wlan]
 type = internal/network
@@ -123,7 +134,7 @@ interface = wlan0
 interval = 3.0
 
 format-connected = <label-connected>
-format-connected-underline = #9f78e1
+format-connected-underline = #0077ff
 label-connected = %essid%
 
 format-disconnected =
@@ -146,17 +157,6 @@ interval = 5
 date = " %Y-%m-%d"
 time = %H:%M
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
+format-underline = #bb00ff
 label = %date% %time%
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume = <label-volume>
-format-volume-underline = #373966
-label-volume = VOL %percentage%%
-label-volume-foreground = ${root.foreground}
-
-label-muted = muted
-label-muted-foreground = #666
 
