Some more polybar updates

--- a/leftwm/themes/night-sky/polybar.ini
+++ b/leftwm/themes/night-sky/polybar.ini
@@ -137,7 +137,8 @@ format-connected = <label-connected>
 format-connected-underline = #0077ff
 label-connected = %essid%
 
-format-disconnected =
+label-disconnected = disconnected
+label-disconnected-foreground = #666
 
 [module/eth]
 type = internal/network
