--- a/leftwm/themes/night-sky/polybar.ini
+++ b/leftwm/themes/night-sky/polybar.ini
@@ -42,11 +42,11 @@ tail = true
 
 
 [bar/barbase]
-width = ${env:width}
-offset-x = ${env:offsetx}
 monitor = ${env:monitor}
-;offset-y = ${env:y}
-;width = 100%
+bottom = true
+offset-x = 0
+offset-y = 0
+width = 100%
 height = 20 
 fixed-center = false
 background = ${colors.background}
@@ -58,7 +58,7 @@ border-color = #00000000
 padding-left = 0
 padding-right = 2
 module-margin-left = 1
-module-margin-right = 2
+module-margin-right = 1
 font-0 = misc fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = wuncon siji:pixelsize=10;1
