--- a/leftwm/themes/night-sky/polybar.ini
+++ b/leftwm/themes/night-sky/polybar.ini
@@ -63,11 +63,15 @@ font-0 = misc fixed:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = wuncon siji:pixelsize=10;1
 modules-center =
-modules-right = battery xbacklight pulseaudio memory cpu wlan eth date
-tray-position = right
-tray-padding = 2
+modules-right = battery xbacklight pulseaudio memory cpu wlan eth date tray
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+[module/tray]
+type = internal/tray
+format = <tray>
+tray-spacing = 5
+tray-size = 100%
 
 [module/xwindow]
 type = internal/xwindow
